--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -70,3 +70,48 @@ a[href|="/swordhoof"] {
     height: 70px;
     background-image: url(%%swordhoof%%)
     }
+
+a[href|="/swordcrazy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 70px;
+    background-image: url(%%swordcrazy%%)
+    }
+
+a[href|="/swordmad"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 70px;
+    background-image: url(%%swordmad%%)
+    }
+
+a[href|="/swordsad"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 70px;
+    background-image: url(%%swordsad%%)
+    }
+
+a[href|="/swordshock"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 70px;
+    background-image: url(%%swordshock%%)
+    }
+
+a[href|="/swordsmile"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 70px;
+    height: 70px;
+    background-image: url(%%swordsmile%%)
+    }
