--- a/source-css/mylittlenosleep.css
+++ b/source-css/mylittlenosleep.css
@@ -58,7 +58,7 @@ margin-top: -14px;
 
 /*Background color and image ----Nightmode fixes for the background --- /r/mlas-----*/
 
-body, body.res-nightmode:first-of-type{ background: #000000 url(%%window%%) no-repeat fixed 59% 100% !important }
+body, body.res-nightmode:first-of-type{ background: #000000 url(%%zalpink%%) no-repeat fixed 59% 100% !important }
 .content #siteTable div[onclick="click_thing(this)"] {
     background-color: transparent !important
     }
