--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -10,6 +10,7 @@ Change log:
 SeriouslyGDB
         > 4 name changes (8/5, 8/6, 8/7)
         > Messin' with UDNT (8/6, 8/7)
+        > Serious name changes (12/15)
 
 SeriouslyComfy
         > Centered the downvote background proper.
@@ -44,8 +45,15 @@ SeriouslyMaku:
         > Changed Subscriber's stuff
         > Added new emotes on 250Sheet1a
         > Added new emotes to EmoteSheet4b
-        >MORE EMOTES
+        > MORE EMOTES
         > 'Nother one.
+        > NEVER ENOUGH
+        > Combined SeriouslyHappy, Upset, Unamused, and pissed into a sheet to allow for more images.
+        > Added LunaSheet
+        > ...is very silly 
+        > :3
+        > It's Luna's day of birthing! :D
+        > Babbada booby
 */
 
 
@@ -63,7 +71,7 @@ a.author:after {
 a.author:before{
     content:"Seriously"
     }
-.id-t2_7touf, .id-t2_6n7u8, a.author[href$="Thecursed"], a.author[href$="JustAnotherGDB"], a.author[href$="FluttershyGuy20"], a.author[href$="TheDizzy"], a.author[href$="maku450"], a.author[href$="Ghassul"], a.author[href$="novadies"], a.author[href$="ruffletuffle"], a.author[href$="KillerRabbit1253"], a.author[href$="I_Forget_Shit"], a.author[href$="theKarmaCrusader"], a.author[href$="hiero_"], a.author[href$="petraman"], a.author[href$="Broken_Wagonwheel"], a.author[href$="TheDarkman67"], a.author[href$="Galdion"], a.author[href$="theMagicalCouch"], a.author[href$="bryvood"], a.author[href$="YarnTheory"], a.author[href$="Imaginecat22"], a.author[href$="bobobo1618"], a.author[href$="floutsy"], a.author[href$="cheesemoo"], a.author[href$="Sylverstone14"], a.author[href$="Avebone"], a.author[href$="MrPOSSLQ"], a.author[href$="Nyax-A"], a.author[href$="Danny_Moon"], a.author[href$="MisanthropicCat"], a.author[href$="Cheesebunker"], a.author[href$="sfitzknott"], a.author[href$="FreeqAxel"], a.author[href$="CKTofu"], a.author[href$="pwned1711"], a.author[href$="Danphos"], .id-t2_61u7x, a.author[href$="cezzlo"], a.author[href$="Itsmejohn1"], a.author[href$="pickled_octopus"], a.author[href$="UDNTNOME"], a.author[href$="Apprentice1994"], a.author[href$="dragonblade629"], a.author[href$="Cburger48"], a.author[href$="Berbaw06"], a.author[href$="smfd"], a.author[href$="BettyMcBitterpants"], a.author[href$="bitoku_no_ookami"], a.author[href$="Tentacolt"], a.author[href$="AllTheseApples"], a.author[href$="ThatOneRedditorBrony"], a.author[href$="Scootaluna"], a.author[href$="irreama"], a.author[href$="Happycamper101"], a.author[href$="Lord_Ninka"], a.author[href$="tacomantotherescue"], a.author[href$="CatmanIX"], a.author[href$="nallar"], a.author[href$="MemeticOutlaw"], a.author[href$="Calcos323"],a.author[href$="Sinfulfayt"]{
+.id-t2_7touf, .id-t2_6n7u8, a.author[href$="Thecursed"], a.author[href$="JustAnotherGDB"], a.author[href$="FluttershyGuy20"], a.author[href$="TheDizzy"], a.author[href$="maku450"], a.author[href$="Ghassul"], a.author[href$="novadies"], a.author[href$="ruffletuffle"], a.author[href$="KillerRabbit1253"], a.author[href$="I_Forget_Shit"], a.author[href$="theKarmaCrusader"], a.author[href$="hiero_"], a.author[href$="petraman"], a.author[href$="Broken_Wagonwheel"], a.author[href$="TheDarkman67"], a.author[href$="Galdion"], a.author[href$="theMagicalCouch"], a.author[href$="bryvood"], a.author[href$="YarnTheory"], a.author[href$="Imaginecat22"], a.author[href$="bobobo1618"], a.author[href$="floutsy"], a.author[href$="cheesemoo"], a.author[href$="Sylverstone14"], a.author[href$="Avebone"], a.author[href$="MrPOSSLQ"], a.author[href$="Nyax-A"], a.author[href$="Danny_Moon"], a.author[href$="MisanthropicCat"], a.author[href$="Cheesebunker"], a.author[href$="sfitzknott"], a.author[href$="FreeqAxel"], a.author[href$="CKTofu"], a.author[href$="pwned1711"], a.author[href$="Danphos"], .id-t2_61u7x, a.author[href$="cezzlo"], a.author[href$="Itsmejohn1"], a.author[href$="pickled_octopus"], a.author[href$="UDNTNOME"], a.author[href$="Apprentice1994"], a.author[href$="dragonblade629"], a.author[href$="Cburger48"], a.author[href$="Berbaw06"], a.author[href$="smfd"], a.author[href$="BettyMcBitterpants"], a.author[href$="bitoku_no_ookami"], a.author[href$="Tentacolt"], a.author[href$="AllTheseApples"], a.author[href$="ThatOneRedditorBrony"], a.author[href$="Scootaluna"], a.author[href$="irreama"], a.author[href$="Happycamper101"], a.author[href$="Lord_Ninka"], a.author[href$="tacomantotherescue"], a.author[href$="CatmanIX"], a.author[href$="nallar"], a.author[href$="MemeticOutlaw"], a.author[href$="Calcos323"],a.author[href$="Sinfulfayt"], a.author[href$="candid_canid"]{
     font-size: 0px !important;
     display: inline-block;
     letter-spacing: -20px;
@@ -261,6 +269,9 @@ a.author[href$="Sinfulfayt"]:after {
 a.author[href$="Calcos323"]:after {
     content: "SeriouslyCalcybutt";
     }
+ a.author[href$="candid_canid"]:after {
+    content: "SeriouslyCandid";
+    }
 
 /***********************
 *
@@ -408,7 +419,7 @@ a.author[href$="Calcos323"]:after {
 }
 
 body:first-of-type, body.res-nightmode:first-of-type {
-    background: url(%%serishy%%)no-repeat fixed 30% 90% !important
+    background: url(%%lunabirthday%%)no-repeat fixed 30% 90% !important
     }
 
 /***  Sidebar Woona  ***/
@@ -427,7 +438,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
 /***  Seriously? This is seriously the Banner?  ***/
 body #header-bottom-left {
     background-color:  #8B6969 !important;
-    background: url(%%Banner111%%) no-repeat center bottom !important;
+    background: url(%%lunabanner%%) no-repeat center bottom !important;
     }
 /*** Bottom page Luna ***/
 .footer-parent {
@@ -802,38 +813,29 @@ a[href|="/lunawink"] {
     height: 130px;
     background-image:url(%%lunawink%%)
     }
+a[href|="/seriouslyhappy"], a[href|="/seriouslyunamused"], a[href|="/seriouslyupset"], a[href|="/seriouslypissed"] {
+    display: block;
+    clear: none;
+    float: left;
+    height: 130px;
+    background-image:url(%%EmotionSheet%%)
+    }
 a[href|="/seriouslyhappy"] {
-    display: block;
-    clear: none;
-    float: left;
     width: 137px;
-    height: 130px;
-    background-image:url(%%seriouslyhappy%%)
-    }
-a[href|="/seriouslyunamused"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 124px;
-    height: 130px;
-    background-image:url(%%seriouslyunamused%%)
-    }
-a[href|="/seriouslyupset"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 132px;
-    height: 130px;
-    background-image:url(%%seriouslyupset%%)
-    }
+    background-position: -0px -0px
+}
 a[href|="/seriouslypissed"] {
-    display: block;
-    clear: none;
-    float: left;
     width: 133px;
-    height: 130px;
-    background-image:url(%%seriouslypissed%%)
-    }
+    background-position: -137px -0px
+}
+a[href|="/seriouslyunamused"] {
+    width: 124px;
+    background-position: -270px -0px
+}
+a[href|="/seriouslyupset"] {
+    width: 132px;
+    background-position: -394px -0px
+}
 a[href|="/lunasoserious"] {
     display: block;
     clear: none;
@@ -1004,6 +1006,27 @@ a[href|="/seriouslypie"] {
     height: 130px;
     background-image:url(%%seriouspie%%)
     }
+
+a[href|="/nightprincess"], a[href|="/lunashyhug"], a[href|="/lunashy"], a[href|="/lunadaw"] {
+    display: block;
+    clear: none;
+    float: left;
+    height: 250px;
+    background-image: url(%%LunaSheet%%)
+    }
+a[href|="/nightprincess"] {
+    width: 180px;
+    background-position: -0px -0px
+}
+a[href|="/lunadaw"] {
+    width: 240px;
+    background-position: -182px -0px
+}
+a[href|="/lunashyhug"], a[href|="/lunashy"] {
+    width: 250px;
+    background-position: -427px -0px
+}
+
 
 /*** Submission Text ***/
 
