--- a/source-css/tbpimagedump.css
+++ b/source-css/tbpimagedump.css
@@ -46,6 +46,42 @@ ul.tabmenu li a, ul.tabmenu li.selected a {
     margin-top: 5px;
     padding-top: 458px
     }*/
+/*Flair*/
+.flair {
+    padding: 0;
+    background: none;
+    color: black;
+    border: 0;
+    border-radius: 0;
+    background-image: url(%%Flair%%);
+    display: inline-block;
+    width: 16px;
+    height: 16px
+    }
+.flair-at {
+    background-position: 0px 0px
+    }
+.flair-pyro {
+    background-position: 0px -16px
+    }
+.flair-ilf {
+    background-position: 0px -32px
+    }
+.flair-emu {
+    background-position: 0px -48px
+    }
+.flair-epi {
+    background-position: 0px -64px
+    }
+.flair-smash {
+    background-position: 0px -80px
+    }
+.flair-knock {
+    background-position: 0px -96px
+    }
+.flair-shhh {
+    background-position: 0px -112px
+    }
 /*Standard Emotes*/
 /*BPF2 emutes*/
 a[href|="/bpf30"], a[href|="/bpf31"], a[href|="/bpf32"], a[href|="/bpf33"], a[href|="/bpf34"], a[href|="/bpf35"], a[href|="/bpf36"], a[href|="/bpf37"], a[href|="/bpf38"], a[href|="/bpf39"], a[href|="/bpf40"], a[href|="/bpf41"], a[href|="/bpf42"], a[href|="/bpf43"], a[href|="/bpf44"], a[href|="/bpf45"], a[href|="/bpf46"], a[href|="/bpf47"], a[href|="/bpf48"], a[href|="/bpf49"], a[href|="/bpf50"], a[href|="/bpf51"], a[href|="/bpf52"], a[href|="/bpf53"], a[href|="/bpf54"], a[href|="/bpf55"], a[href|="/bpf56"], a[href|="/bpf57"], a[href|="/bpf58"], a[href|="/bpf59"], a[href|="/abworry"], a[href|="/ajeng"], a[href|="/ajfear"], a[href|="/avocado"], a[href|="/celbutterfly"], a[href|="/celestpunk"], a[href|="/cheersrsly"], a[href|="/colmad"], a[href|="/crankysuave"], a[href|="/dashin"], a[href|="/datspitfire"], a[href|="/djhello"], a[href|="/fsjoy"], a[href|="/ironwill"], a[href|="/macshock"], a[href|="/ppglass"], a[href|="/cheerwink"], a[href|="/ppshutup"], a[href|="/rarhungry"], a[href|="/pinkin"], a[href|="/raruhoh"], a[href|="/rdcoffee"], a[href|="/rdhide"], a[href|="/sbshock"], a[href|="/scootrage"], a[href|="/twidothis"],a[href|="/chsquash"], a[href|="/twisilly"], a[href|="/takeheart"], a[href|="/takemoney"], a[href|="/rbpf30"], a[href|="/rbpf31"], a[href|="/rbpf32"], a[href|="/rbpf33"], a[href|="/rbpf34"], a[href|="/rbpf35"], a[href|="/rbpf36"], a[href|="/rbpf37"], a[href|="/rbpf38"], a[href|="/rbpf39"], a[href|="/rbpf40"], a[href|="/rbpf41"], a[href|="/rbpf42"], a[href|="/rbpf43"], a[href|="/rbpf44"], a[href|="/rbpf45"], a[href|="/rbpf46"], a[href|="/rbpf47"], a[href|="/rbpf48"], a[href|="/rbpf49"], a[href|="/rbpf50"], a[href|="/rbpf51"], a[href|="/rbpf52"], a[href|="/rbpf53"], a[href|="/rbpf54"], a[href|="/rbpf55"], a[href|="/rbpf56"], a[href|="/rbpf57"], a[href|="/rbpf58"], a[href|="/rbpf59"], a[href|="/rabworry"], a[href|="/rajeng"], a[href|="/rajfear"], a[href|="/ravocado"], a[href|="/rcelbutterfly"], a[href|="/rcelestpunk"], a[href|="/rcheersrsly"], a[href|="/rcolmad"], a[href|="/rcrankysuave"], a[href|="/rdashin"], a[href|="/rdatspitfire"], a[href|="/rdjhello"], a[href|="/rfsjoy"], a[href|="/rironwill"], a[href|="/rmacshock"], a[href|="/rppglass"], a[href|="/rcheerwink"], a[href|="/rppshutup"], a[href|="/rrarhungry"], a[href|="/rpinkin"], a[href|="/rraruhoh"], a[href|="/rrdcoffee"], a[href|="/rrdhide"], a[href|="/rsbshock"], a[href|="/rscootrage"], a[href|="/rtwidothis"],a[href|="/rchsquash"], a[href|="/rtwisilly"], a[href|="/rtakeheart"], a[href|="/rtakemoney"] {
