--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -176,11 +176,11 @@ a[href|="/flutterhugs"] {
     height: 267px;
     background-image: url(%%flutterhugs%%)
     }
-/* Wintery emotes - Only two at the moment- */
+/* Wintery emotes - Only four at the moment- */
 
 
 
-a[href|="/snowshy"], a[href|="/wfs00"], a[href|="/wfs01"], a[href|="/wfs02"], a[href|="/wfs10"], a[href|="/merryshy"], a[href|="/wfs20"], a[href|="/scarfshy"], a[href|="/wfs11"], a[href|="/wfs12"], a[href|="/wfs21"], a[href|="/wfs22"] {
+a[href|="/snowshy"], a[href|="/wfs00"], a[href|="/wfs01"], a[href|="/santashy"], a[href|="/wfs02"], a[href|="/wfs10"], a[href|="/merryshy"], a[href|="/wfs20"], a[href|="/scarfshy"], a[href|="/wfs11"], a[href|="/wfs12"], a[href|="/wfs21"], a[href|="/wfs22"] {
 
 display: block;
 clear: none;
@@ -193,7 +193,7 @@ background-image: url(%%wintermotes%%) !important
 a[href|="/snowshy"], a[href|="/wfs00"] { background-position: -0px -0px }
 a[href|="/merryshy"], a[href|="/wfs10"] { background-position: -100px -0px }
 a[href|="/scarfshy"], a[href|="/wfs20"] { background-position: -200px -0px }
-
+a[href|="/santashy"], a[href|="/wfs01"] { background-position: -0px -100px }
 /* Space thingy */
 a[href|="/sp"] {
     display: inline-block;
@@ -348,8 +348,8 @@ display: none !important;
    z-index: 999;
 }
 
-/* Get rid of RES tags and vote weight on the modbox */
-.sidecontentbox .voteWeight, .sidecontentbox .userTagLink {
+/* Get rid of RES tags, vote weight and flair on the modbox */
+.sidecontentbox .voteWeight, .sidecontentbox .userTagLink, .flair {
     display: none !important
 }
 
