--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -40,6 +40,7 @@ JustAnotherGDB
 - Lots-a-new emotes in the interim (10/1 - 11/3)
 - Doctorfun added.  We're being fuckin rebels. (12/4)
 - Emotes for Cursed and Apprentice. Added zecorapour (12/10)
+- MOAR EMOOTS (12/15)
 
 MisanthropicCat
 - Is a kitty
@@ -95,7 +96,7 @@ div.titlebox .users-online span.number:after{content:" drowning in syrup"}
 /********************************/
 
 /******Insert name here to replace******/
-a.author[href$=JustAnotherGDB], a.author[href$=MisanthropicCat], a.author[href$=Conky_], a.author[href$=floutsy], a.author[href$=ruffletuffle], a.author[href$=Apple_Snacks], a.author[href$=petraman], a.author[href$=WorstPossibleThing], a.author[href$=Esplin], a.author[href$=theMagicalCouch], a.author[href$=pickled_octopus], a.author[href$=hiero_], a.author[href$=Thecursed], a.author[href$=Apprentice1994], a.author[href$=dasflash], a.author[href$=TheDarkman67], a.author[href$=derram_2], a.author[href$=maku450] {
+a.author[href$=JustAnotherGDB], a.author[href$=MisanthropicCat], a.author[href$=Conky_], a.author[href$=floutsy], a.author[href$=ruffletuffle], a.author[href$=Apple_Snacks], a.author[href$=petraman], a.author[href$=WorstPossibleThing], a.author[href$=Esplin], a.author[href$=theMagicalCouch], a.author[href$=pickled_octopus], a.author[href$=hiero_], a.author[href$=Thecursed], a.author[href$=Apprentice1994], a.author[href$=dasflash], a.author[href$=TheDarkman67], a.author[href$=derram_2], a.author[href$=maku450], a.author[href$=Calcos323] {
     font-size: 0 !important;
     overflow: hidden;
     display: inline-block;
@@ -175,6 +176,10 @@ a.author[href$=maku450]:before {
     content: "Pankakku450";
     font-size: 10px;
     }
+a.author[href$=Calcos323]:before {
+    content: "ButteryCalcos";
+    font-size: 10px;
+    }
 
 /************Additions*************/
 a.author[href$=JustAnotherGDB]:after {
@@ -200,7 +205,7 @@ a.author[href$=Conky_]:after {
 /********************************/
 
 /************Non-MLP*************/
-a[href|="/smothered"], a[href|="/coconutmonkey"], a[href|="/pan10"], a[href|="/panwaffbattle"], a[href|="/hellocake"], a[href|="/pfreeman"], a[href|="/bugs"], a[href|="/torgo"], a[href|="/pancalcos"], a[href|="/pgaben"], a[href|="/doctordrunk"], a[href|="/notthebees"], a[href|="/evanmacave"] {
+a[href|="/smothered"], a[href|="/coconutmonkey"], a[href|="/pan10"], a[href|="/panwaffbattle"], a[href|="/hellocake"], a[href|="/pfreeman"], a[href|="/bugs"], a[href|="/torgo"], a[href|="/pancalcos"], a[href|="/pgaben"], a[href|="/doctordrunk"], a[href|="/notthebees"], a[href|="/evanmacave"], a[href|="/roofies"] {
     display: block;
     clear: none;
     float: left;
@@ -259,9 +264,24 @@ a[href|="/evanmacave"] {
     background-position: -2004px -0px;
     width: 102px
     }
+a[href|="/roofies"] {
+    background-position: -2106px -0px;
+    width: 137px
+    }
+a[href|="/nerdychriscandyvan"] {
+    display: block;
+    clear: none;
+    float: left;
+    height: 150px;
+    background-image: url(%%NMLPEmoteSheet2%%) !important
+    }
+a[href|="/nerdychriscandyvan"] {
+    background-position: -0px -0px;
+    width: 310px
+    }
 
 /************MLP-LRG*************/
-a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"], a[href|="/synesthesia"], a[href|="/srslypickled"], a[href|="/twinazi"], a[href|="/discursed"], a[href|="/apprentice"], a[href|="/zecorapour"] {
+a[href|="/pghoofpump"], a[href|="/pgshock"], a[href|="/pglegcross"], a[href|="/pgshuffle"], a[href|="/ponykakke"], a[href|="/gdb"], a[href|="/gdbsmirk"],  a[href|="/dinsfire"], a[href|="/dintrot"],  a[href|="/sprankton"], a[href|="/sistersprankton"], a[href|="/flutterhey"], a[href|="/zealot"], a[href|="/sisterzealot"], a[href|="/octaviagasm"], a[href|="/mangohug"], a[href|="/petra"], a[href|="/acer"], a[href|="/darkman"], a[href|="/calcos"], a[href|="/synesthesia"], a[href|="/srslypickled"], a[href|="/twinazi"], a[href|="/discursed"], a[href|="/apprentice"], a[href|="/zecorapour"], a[href|="/worldtrekka"] {
     display: block;
     clear: none;
     float: left;
@@ -370,6 +390,10 @@ a[href|="/apprentice"] {
     }
 a[href|="/zecorapour"] {
     background-position: -2746px -0px;
+    width: 144px
+    }
+a[href|="/worldtrekka"] {
+    background-position: -2890px -0px;
     width: 144px
     }
 
